Fix layout issues

--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -1,4 +1,4 @@
-body { line-height: 1.8 }
+body { line-height: 1.8; }
 footer { margin: 50px 0; }
 
 @media(max-width:768px) {
