--- a/assets/_sass/_main.scss
+++ b/assets/_sass/_main.scss
@@ -1,5 +1,6 @@
 main {
   hr { margin: 80px 0; }
+
   section { 
     overflow: hidden; 
     line-height: 1.8;
@@ -23,86 +24,34 @@ main {
     span { @extend .text-muted; }
   }
 
-  @media(max-width:1200px) {
-    hr { margin: 50px 0; }
-    h2 { font-size: 35px; }
-    h3 { font-size: 25px; }
-    p { font-size: 18px; }
-
-    img {
-      &.pull-left { margin-right: 20px; }
-      &.pull-right { margin-left: 20px; }
-    }
-  }
-
-  @media(max-width:991px) {
-    hr { margin: 40px 0; }
-    h2 { font-size: 30px; }
-    h3 { font-size: 20px; }
-    p { font-size: 14px; }
-
-
-    img {
-      max-width: 50%;
-      &.pull-left { margin-right: 10px; }
-      &.pull-right { margin-left: 10px; }
-    }
-  }
-
-  @media(max-width:768px) {
-    hr { margin: 40px 0; }
-    h2 { font-size: 25px; }
-  }
-
-  @media(max-width:668px) {
-    hr { margin: 30px 0; }
-  }
-
-  @media(max-width:375px) {
-    hr { margin: 10px 0; }
-
-    img {
-      max-width: 100%;
-
-      &.pull-left {
-        margin-right: 0;
-        margin-bottom: 10px;
-      }
-
-      &.pull-right {
-        margin-bottom: 10px;
-        margin-left: 0;
-      }
-    }
+  p { 
+    span { @extend .text-muted; }  
   }
 
   .row {
-    margin: 0 auto
-  }
-
-  .column {
-    float: left;
-    width: 50%;
-  }
-
-  .company {
+    display: flex;
+    flex-wrap: wrap;
     margin: 0 auto;
   }
 
-  .company-logo {
-    border-radius: 0px;
-  }
+  .column { width: 50%; }
+
+  .university-logo { width: 25% }
+
+  .company { margin: 0 auto; }
+
+  .company-logo { border-radius: 0px; }
 
   .bar {
     width: 100%;
     background-color: #ddd;
-      border-radius: 2px;
+    border-radius: 2px;
   }
 
   .skill {
     width: 100%;
     height: 10px;
-    margin-top: 10px;
+    margin-top: 14px;
     border-radius: 2px;
   }
 
@@ -112,9 +61,7 @@ main {
   .java {width: 50%; background-color: black;}
   .c-plus-plus {width: 50%; background-color: black;}
 
-  .contact {
-    float: left;
-  }
+  .contact { float: left; }
 
   .link {
       margin: 20px 30px 0 0;
@@ -152,5 +99,79 @@ main {
   .fa-github {
       background: #333;
       color: white;
+  }
+
+  @media(max-width:1200px) {
+    hr { margin: 50px 0; }
+    h2 { font-size: 35px; }
+    h3 { font-size: 25px; }
+    p { font-size: 18px; }
+
+    img {
+      &.pull-left { margin-right: 20px; }
+      &.pull-right { margin-left: 20px; }
+    }
+
+    .university-logo { flex: 100% }
+
+    .skill { margin-top: 11px; }
+  }
+
+  @media(max-width:991px) {
+    hr { margin: 40px 0; }
+    h2 { font-size: 30px; }
+    h3 { font-size: 20px; }
+    p { font-size: 16px; }
+
+    img {
+      max-width: 50%;
+      &.pull-left { margin-right: 10px; }
+      &.pull-right { margin-left: 10px; }
+    }
+
+    .university-logo { flex: 100% }
+
+    .skill { margin-top: 10px; }
+  }
+
+  @media(max-width:768px) {
+    hr { margin: 40px 0; }
+    h2 { font-size: 25px; }
+    h3 { font-size: 15px; }
+    p { font-size: 14px; }
+
+    .university-logo { flex: 100% }
+
+    .skill { margin-top: 6px; }
+  }
+
+  @media(max-width:668px) {
+    hr { margin: 30px 0; }
+    h3 { font-size: 20px; }
+    p { font-size: 14px; }
+
+    .university-logo { flex: 100% }
+
+    .skill { margin-top: 5px; }
+  }
+
+  @media(max-width:600px) {  
+    p { 
+      font-size: 12px; 
+    }
+
+    .column {
+      flex: 100%;
+      margin-top: 10px;
+    }
+
+    .university-logo { flex: 100% }
+
+    .skill { margin-top: -15px; }
+  }
+
+  @media(max-width:400px) {
+    hr { margin: 10px 0; }
+    p { font-size: 12px; }
   }
 }
